--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
   <meta name="viewport"
     content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, viewport-fit=cover" />
   <title>spare-resources</title>
-  <link rel="stylesheet" href="./src/assets/style/common.css">
 </head>
 
 <body>
   <div id="app">
+    <!-- 开启顶部安全区适配 -->
+    <van-nav-bar safe-area-inset-top />
 
+    <!-- 开启底部安全区适配 -->
+    <van-number-keyboard safe-area-inset-bottom />
   </div>
   <!-- built files will be auto injected -->
 </body>
